--- a/OnlineRegistration/OnlineRegistration/OnlineRegistration.csproj
+++ b/OnlineRegistration/OnlineRegistration/OnlineRegistration.csproj
@@ -194,11 +194,19 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\Images\Images1.jpg" />
+    <Content Include="Content\Images\depositphotos_105514290-stock-photo-python-cubics-word.jpg" />
+    <Content Include="Content\Images\depositphotos_16358703-stock-photo-programming-scheme.jpg" />
+    <Content Include="Content\Images\depositphotos_319759258-stock-photo-java-text-with-blueprint.jpg" />
+    <Content Include="Content\Images\depositphotos_320069624-stock-photo-php-text-with-bolts-wrench.jpg" />
+    <Content Include="Content\Images\frontend2.jpg" />
+    <Content Include="Content\Images\c-sharp.jpg" />
+    <Content Include="Content\Images\MobileApp.jpg" />
+    <Content Include="Content\Images\MobileApp2.jpg" />
+    <Content Include="Content\Images\scratch2.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\styles.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
